# LIS

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: README.md  main.py
app/api/: analyzer_transport.py  audit.py  auth.py  autoverification.py  catalog.py  dashboard.py  deps.py  devices.py  fhir.py  health.py  helpers.py  integrations.py  observations.py  orders.py  qc.py  (+4 more)
db/: README.md  schema.sql
docs/: README.md  alignment.md  analyzer-runtime.md  analyzer-transport.md  architecture.md  astm-driver-layer.md  autoverification-engine.md  backlog.md  dependency-tree.md  device-gateway.md  fhir-facade.md  fhir-mapping.md  hl7-v2-adapter.md  postgres-e2e.md  qc-engine.md  repo-structure.md  runtime-bootstrap.md  validation.md  workflow.md
openapi/: lis-internal-v1.yaml  lis-target-v1.yaml
scripts/: README.md  _smoke_support.py  analyzer_runtime.py  export_openapi.py  export_runtime_bootstrap.py  migrate.py  reset_db.py  seed_demo_data.py  smoke_test.py  smoke_test_astm.py  smoke_test_autoverification.py  smoke_test_fhir.py  smoke_test_integration.py  smoke_test_matrix.py  smoke_test_qc.py  smoke_test_runtime.py  smoke_test_transport.py  validate_sql_artifacts.py  wait_for_db.py
tests/: README.md  support.py  test_analyzer_runtime.py  test_analyzer_transport.py  test_astm_integration.py  test_auth_master_data.py  test_autoverification.py  test_dashboard_ui.py  test_fhir_facade.py  test_integrations.py  test_observations_reports.py  test_qc_engine.py  test_workflows.py
(+59 files in other folders)
